@@ -8,6 +8,7 @@ Date: ??.??.????
   Bugfixes:
     - Rework mechanism not detecting player losing anymore due to wont-fix vanilla regression (102511).
     - Fix crash when player joins lobby during active game.
+    - Fix winner not being teleported back to lobby at end of round.
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.1
 Date: 04. 11. 2021
